--- a/app/views/cosmetics/index.html.erb
+++ b/app/views/cosmetics/index.html.erb
@@ -1,5 +1,19 @@
-<h1>화장품 리스트</h1>
-<% @cosmetics.each do |cosmetic| %>
-    <%= cosmetic.product_name %>
+<div class="container">
+    <div class="row">
+        <% @cosmetics.each do |cosmetic| %>
+            <div class="col-4 mt-5">
+                <div class="card" style="width: 18rem;">
+                    <% if cosmetic.image.attached? %>
+                        <img src="<%= url_for(cosmetic.image) %>%" class="card-img-top" alt="...">
+                    <% end %>
+                    <div class="card-body">
+                        <h5 class="card-title"><%= cosmetic.product_name %></h5>
+                        <p class="card-text"><%= cosmetic.desc %></p>
+                        <a href="/cosmetics/show/<%= cosmetic.id %>" class="btn btn-primary">詳細</a>
+                    </div>
+                </div>
 
-<% end %>
+            </div>
+        <% end %>
+    </div>
+</div>
