--- a/app/views/cosmetics/index.html.erb
+++ b/app/views/cosmetics/index.html.erb
@@ -9,7 +9,7 @@
                     <div class="card-body">
                         <h5 class="card-title"><%= cosmetic.product_name %></h5>
                         <p class="card-text"><%= cosmetic.desc %></p>
-                        <a href="/cosmetics/show/<%= cosmetic.id %>" class="btn btn-primary">詳細</a>
+                        <a href="/cosmetics/<%= cosmetic.id %>" class="btn btn-primary">詳細</a>
                     </div>
                 </div>
 
