--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">LOEN</a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div
-                class="collapse navbar-collapse justify-content-end"
-                " id="
-                navbarnavaltmarkup"="navbarNavAltMarkup"">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="#">メーカー</a>
-                    <a class="nav-link active" href="/cosmetics/index">ショッピング</a>
-                    <a class="nav-link" href="#">オススメ</a>
-                    <a class="nav-link" href="#">ニュース</a>
-                    <a class="nav-link" href="#">ログイン</a>
-                    <a class="nav-link" href="#">会員加入</a>
-                </div>
-            </div>
-        </nav>
+        <%= render "shared/header" %>
         <%= yield %>
     </body>
 </html>
