--- a/app/views/cosmetics/show.html.erb
+++ b/app/views/cosmetics/show.html.erb
@@ -30,8 +30,20 @@
             <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
             <input type="hidden" name="cosmetic_id" value="<%= @cosmetic.id %>">
             <div calss="form-group">
+                <label for="exampleFormControlSelect1">Example select</label>
                 <label for="quantity">数量</label>
-                <input type="number" name="quantity" value="1" id="quantity" class="form-control" min="1" max="10">
+                 <select class="form-control" name="quantity" id="quantity">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
             </div>
             <br>
             <button type="submit" class="btn btn-outline-dark">カートに入れる</button>
