--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">LOEN</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" " id=" navbarnavaltmarkup"=" navbarNavAltMarkup""="navbarNavAltMarkup" "">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarnavaltmarkup"
+        navbarNavAltMarkup="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-link active" href="#">メーカー</a>
             <a class="nav-link active" href="/cosmetics">ショッピング</a>
@@ -11,19 +13,23 @@
             <a class="nav-link" href="#">ニュース</a>
             <%#　ログインしているユーザが見れる部分  %>
             <% if user_signed_in? %>
-                <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <%= current_user.email %>
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">マイページ</a>
-                        <a class="dropdown-item" href="/users/sign_out" data-method="delete">ログアウト</a>
-                    </div>
+            <a class="nav-item nav-link" href="/carts">
+            <%= icon('fas', 'shopping-cart') %>
+            </a>
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <%= current_user.email %>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">マイページ</a>
+                    <a class="dropdown-item" href="/users/sign_out" data-method="delete">ログアウト</a>
                 </div>
+            </div>
             <%#　ログインしてないユーザが見れる部分  %>
             <% else %>
-                <a class="nav-link" href="/users/sign_in">ログイン</a>
-                <a class="nav-link" href="/users/sign_up">会員加入</a>
+            <a class="nav-link" href="/users/sign_in">ログイン</a>
+            <a class="nav-link" href="/users/sign_up">会員加入</a>
             <% end %>
 
         </div>
