#Cart - カート入れる時のメッセージ - コスメ情報とカートの連携 - カートの削除機能

--- a/app/views/cosmetics/show.html.erb
+++ b/app/views/cosmetics/show.html.erb
@@ -32,7 +32,7 @@
             <div calss="form-group">
                 <label for="exampleFormControlSelect1">Example select</label>
                 <label for="quantity">数量</label>
-                 <select class="form-control" name="quantity" id="quantity">
+                <select class="form-control" name="quantity" id="quantity">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -50,4 +50,13 @@
         </form>
     </div>
 </div>
-</div>
+<script>
+
+    <% if flash[:notice].present? %>
+        result = confirm("<%= flash[:notice] %>")
+
+        if (result) {
+            location.href = "/carts"
+        }
+    <% end %>
+</script>
