--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -15,38 +15,17 @@
           </tr>
         </thead>
         <tbody>
+          <% @carts.each do |cart|%>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row"><%= cart.cosmetic.product_name %></th>
+            <td><%= number_to_currency(cart.cosmetic.price) %></td>
+            <td><%= cart.quantity %></td>
+            <td><%= number_to_currency(cart.quantity * cart.cosmetic.price) %></td>
             <td>
-              <a href="">
-                <%= icon('fas', 'times-circle') %>
-              </a>
+              <a href="/carts/<%= cart.id %>" class="ml-2" data-method="delete" data-confirm="商品を削除しますか？"><%= icon('fas', 'times-circle') %></a>
             </td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-                        <td>
-              <a href="">
-                <%= icon('fas', 'times-circle') %>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-                        <td>
-              <a href="">
-                <%= icon('fas', 'times-circle') %>
-              </a>
-            </td>
-          </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
