#Orders 住所検索API追加（郵便番号利用）
#MyPage
注文履歴ページ追加（Orders連携）
Rails-erd Gem追加及びERD確認

#その他
ViewHelper作成
Controller → Model（メソッド化）
AnyLogin_Gem追加

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -20,7 +20,7 @@
             <th scope="row"><%= cart.cosmetic.product_name %></th>
             <td><%= number_to_currency(cart.cosmetic.price) %></td>
             <td><%= cart.quantity %></td>
-            <td><%= number_to_currency(cart.quantity * cart.cosmetic.price) %></td>
+            <td><%= cart_to_currency(cart) %></td>
             <td>
               <a href="/carts/<%= cart.id %>" class="ml-2" data-method="delete"
                 data-confirm="商品を削除しますか？"><%= icon('fas', 'times-circle') %></a>
