--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,7 @@
                     <%= current_user.email %>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">マイページ</a>
+                    <a class="dropdown-item" href="/mypage">マイページ</a>
                     <a class="dropdown-item" href="/users/sign_out" data-method="delete">ログアウト</a>
                 </div>
             </div>
