#BootStrapバージョン修正
#Orders
- 注文確定ページ作成
- コントローラーのコードのModelに移す（メソッド化）
- ペイパル決済SandBox追加

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -26,7 +26,9 @@
               <td><%= order.created_at.strftime("%F") %></td>
               <td><%= order.name %></td>
               <td><%= order.address %></td>
-              <td><%= order.status %></td>
+              <td>
+                <a href="#" class="badge badge-warning"><%= order.status %></a>
+              </td>
               <td><a href="/orders/<%= order.id %>" class="btn btn-primary">詳細</a></td>
             </tr>
           <% end %>
