--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12 mt-5">
+  <div class="row mt-5">
+    <div class="col-12">
       <h3>注文内容を確認・変更する</h3>
       <% @order.order_items.each do |item| %>
       <div class="card mt-4">
@@ -46,10 +46,80 @@
       </form>
     </div>
   </div>
+
+  <div class="row mt-5">
+    <div class="col-12">
+      <h3>領収書/購入明細書</h3>
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between">
+            <h5 class="card-title">商品の小計</h5>
+            <p class="card-text"><%= number_to_currency(@order.product_price) %></p>
+          </div>
+          <div class="d-flex justify-content-between mt-3">
+            <h5 class="card-title">配送料・手数料</h5>
+            <p class="card-text"><%= number_to_currency(@order.shipping_fee) %></p>
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="d-flex justify-content-between mt-3">
+            <h5 class="card-title">ご請求額</h5>
+            <p class="card-text"><%= number_to_currency(@order.total_price) %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row my-5">
+    <div class="col-12">
+      <div id="smart-button-container">
+        <div style="text-align: center;">
+          <div id="paypal-button-container"></div>
+        </div>
+      </div>
+      <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=JPY"
+        data-sdk-integration-source="button-factory"></script>
+      <script>
+        function initPayPalButton() {
+          paypal.Buttons({
+            style: {
+              shape: 'rect',
+              color: 'gold',
+              layout: 'vertical',
+              label: 'pay',
+
+            },
+
+            createOrder: function (data, actions) {
+              return actions.order.create({
+                purchase_units: [{
+                  "amount": {
+                    "currency_code": "JPY",
+                    "value": 1
+                  }
+                }]
+              });
+            },
+
+            onApprove: function (data, actions) {
+              return actions.order.capture().then(function (details) {
+                alert('Transaction completed by ' + details.payer.name.given_name + '!');
+              });
+            },
+
+            onError: function (err) {
+              console.log(err);
+            }
+          }).render('#paypal-button-container');
+        }
+        initPayPalButton();
+      </script>
+    </div>
+  </div>
 </div>
 
 <script>
-// 住所検索（郵便番号利用）
+  // 住所検索（郵便番号利用）
   var getAddName = function ($addNum) {
     var _zipcloudAPI = document.body.appendChild(document.createElement("script"));
     _zipcloudAPI.src = "http://zipcloud.ibsnet.co.jp/api/search?zipcode=" + $addNum +
