--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -77,47 +77,53 @@
           <div id="paypal-button-container"></div>
         </div>
       </div>
-      <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=JPY"
-        data-sdk-integration-source="button-factory"></script>
-      <script>
-        function initPayPalButton() {
-          paypal.Buttons({
-            style: {
-              shape: 'rect',
-              color: 'gold',
-              layout: 'vertical',
-              label: 'pay',
-
-            },
-
-            createOrder: function (data, actions) {
-              return actions.order.create({
-                purchase_units: [{
-                  "amount": {
-                    "currency_code": "JPY",
-                    "value": 1
-                  }
-                }]
-              });
-            },
-
-            onApprove: function (data, actions) {
-              return actions.order.capture().then(function (details) {
-                alert('Transaction completed by ' + details.payer.name.given_name + '!');
-              });
-            },
-
-            onError: function (err) {
-              console.log(err);
-            }
-          }).render('#paypal-button-container');
-        }
-        initPayPalButton();
-      </script>
     </div>
   </div>
 </div>
+<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=JPY" data-sdk-integration-source="button-factory">
+</script>
+<script>
+  $(document).ready(function () {
+    if (self.name != 'reload') {
+      self.name = 'reload';
+      self.location.reload(true);
+    } else self.name = '';
+  });
 
+  function initPayPalButton() {
+    paypal.Buttons({
+      style: {
+        shape: 'rect',
+        color: 'gold',
+        layout: 'vertical',
+        label: 'pay',
+
+      },
+
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: [{
+            "amount": {
+              "currency_code": "JPY",
+              "value": 1
+            }
+          }]
+        });
+      },
+
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (details) {
+          alert('Transaction completed by ' + details.payer.name.given_name + '!');
+        });
+      },
+
+      onError: function (err) {
+        console.log(err);
+      }
+    }).render('#paypal-button-container');
+  }
+  initPayPalButton();
+</script>
 <script>
   // 住所検索（郵便番号利用）
   var getAddName = function ($addNum) {
