--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,23 +14,27 @@
         <thead>
           <tr>
             <th scope="col">注文日</th>
-            <th scope="col">お届け先</th>
-            <th scope="col">住所</th>
+            <th scope="col">名前</th>
+            <th scope="col">お届け先住所</th>
             <th scope="col">状況</th>
             <th scope="col">注文の詳細</th>
           </tr>
         </thead>
         <tbody>
           <% @orders.each do |order| %>
-            <tr>
-              <td><%= order.created_at.strftime("%F") %></td>
-              <td><%= order.name %></td>
-              <td><%= order.address %></td>
-              <td>
-                <a href="#" class="badge badge-warning"><%= order.status %></a>
-              </td>
-              <td><a href="/orders/<%= order.id %>" class="btn btn-primary">詳細</a></td>
-            </tr>
+          <tr>
+            <td><%= order.created_at.strftime("%F") %></td>
+            <td><%= order.name %></td>
+            <td><%= order.address %></td>
+            <td>
+              <a href="#" class="badge badge-warning"><%= order.status %></a>
+            </td>
+            <% if order.before_payment? || order.order_failed? %>
+            <td><a href="/orders/<%= order.id %>" class="btn btn-primary">詳細</a></td>
+            <% else %>
+            <td></td>
+            <% end %>
+          </tr>
           <% end %>
         </tbody>
       </table>
