--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,15 @@
     <title>ProjLoen</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track':
-        'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+  <div class="container">
     <%= render "shared/header" %>
     <%= yield %>
     <%= any_login_here if defined?(AnyLogin) %>
+    <%= render "shared/footer" %>
+  </div>
   </body>
 </html>
