--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
   <div class="row mt-5">
     <div class="col-12">
       <h3>注文内容を確認・変更する</h3>
@@ -97,7 +96,6 @@
       </div>
     </div>
   </div>
-</div>
 <script>
   check_form();
 
@@ -225,6 +223,7 @@
           var resultFlg = "000"
           var message = details.payer.name.given_name + ' 様の決済が正常に完了しました。';
 
+          // 入力して情報
           $("#payer_id").val(details.payer.payer_id)
           $("#details_id").val(details.id)
           $("#merchant_id").val(details.purchase_units[0].payee.merchant_id)
@@ -232,6 +231,17 @@
           $("#msg").val(message)
           $("#resultFlg").val(resultFlg)
           $("#order_info_form").submit()
+
+          // 決済情報 Ajax
+          // data = {
+          //   response: details
+          // }
+
+          // Rails.ajax({
+          //   type: "POST",
+          //   url: "/orders/<%= @order.id %>/payments",
+          //   data: new URLSearchParams(data)
+          // })
 
           alert(message);
         });
