--- a/app/assets/stylesheets/cosmetics.scss
+++ b/app/assets/stylesheets/cosmetics.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the cosmetics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.card-img-top {
+  width: auto; height: auto;
+  width: 700px;
+  height: 400px;
+}
