--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,11 @@
   font-size: 1.3em;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto; 
+}
+
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
