--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,20 +25,9 @@
     </a>
   </div>
 
-
-
-  <!-- Jumbotron Header -->
-  <header class="jumbotron my-4">
-    <h1 class="display-3">A Warm Welcome!</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt
-      possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam
-      repellat.</p>
-    <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
-  </header>
-
-  <!-- Page Features -->
+<img src="<%= asset_path("banner_event.png") %>" class="img-fluid w-100 mb-3" alt="Responsive image">
+<h2><p>💥 売れ筋ランキング</p></h1>
   <div class="row text-center">
-
     <div class="col-lg-3 col-md-6 mb-4">
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
@@ -48,7 +37,7 @@
             neque.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a href="#" class="btn btn-warning">詳細</a>
         </div>
       </div>
     </div>
@@ -62,11 +51,10 @@
             tempore debitis beatae culpa natus architecto.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a href="#" class="btn btn-warning">詳細</a>
         </div>
       </div>
     </div>
-
     <div class="col-lg-3 col-md-6 mb-4">
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/500x325" alt="">
@@ -76,7 +64,36 @@
             neque.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a href="#" class="btn btn-warning">詳細</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente,
+            tempore debitis beatae culpa natus architecto.</p>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="btn btn-warning">詳細</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <h2><p>⭐️ 星4つ以上の商品</p></h1>
+  <div class="row text-center">
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
+            neque.</p>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="btn btn-warning">詳細</a>
         </div>
       </div>
     </div>
@@ -90,14 +107,38 @@
             tempore debitis beatae culpa natus architecto.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a href="#" class="btn btn-warning">詳細</a>
         </div>
       </div>
     </div>
-
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
+            neque.</p>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="btn btn-warning">詳細</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente,
+            tempore debitis beatae culpa natus architecto.</p>
+        </div>
+        <div class="card-footer">
+          <a href="#" class="btn btn-warning">詳細</a>
+        </div>
+      </div>
+    </div>
   </div>
   <hr class="featurette-divider">
-
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span>
@@ -115,9 +156,7 @@
       </svg>
     </div>
   </div>
-
   <hr class="featurette-divider">
-
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
@@ -134,9 +173,7 @@
       </svg>
     </div>
   </div>
-
   <hr class="featurette-divider">
-
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
