ref #1 News added

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
           <a class="nav-link" href="#">メーカー</a>
           <a class="nav-link active" href="/cosmetics">ショッピング</a>
           <a class="nav-link" href="#">オススメ</a>
-          <a class="nav-link" href="#">ニュース</a>
+          <a class="nav-link active" href="/news">ニュース</a>
           <%# ログインしているユーザが見れる部分  %>
           <% if user_signed_in? %>
           <a class="nav-item nav-link" href="/carts">
