--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,7 +1,7 @@
   <div class="row">
-    <div class="col-12">
-      <div class="mt-5">
-        <h2><%= icon('fas', 'shopping-cart') %>カート</h2>
+    <div class="col-12" style="font-size: 1.2em;">
+      <div class="mt-5 my-4">
+        <h2><%= icon('fas', 'shopping-cart') %> カート</h2>
       </div>
       <table class="table table-hover">
         <thead>
