--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,11 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <div class="collapse navbar-collapse justify-content-end" id="navbarnavaltmarkup"
         navbarNavAltMarkup="navbarNavAltMarkup">
-        <div class="navbar-nav">
+      <div class="navbar-nav">
           <a class="nav-link" href="#">メーカー</a>
           <a class="nav-link active" href="/cosmetics">ショッピング</a>
           <a class="nav-link" href="#">オススメ</a>
-          <a class="nav-link active" href="/news">ニュース</a>
+          <a class="nav-link active" href="/blogs">ビューティコラム</a>
+          <a class="nav-link active" href="/news">お知らせ</a>
           <%# ログインしているユーザが見れる部分  %>
           <% if user_signed_in? %>
           <a class="nav-item nav-link" href="/carts">
