--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// *= require news
+// *= require blogs
 
 .logo {
   width: auto; height: auto;
@@ -14,6 +14,10 @@
   max-width: 100%;
   height: auto; 
 }
+
+a:link { color: black; text-decoration: none;}
+a:visited { color: black; text-decoration: none;}
+a:hover { color: blue; text-decoration: underline;}
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
