--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
-// *= require blogs
+/*
+*= require active_admin
+*= require blogs
+*= require news
+ */
 
 .logo {
   width: auto; height: auto;
@@ -14,11 +18,6 @@
   max-width: 100%;
   height: auto; 
 }
-
-a:link { color: black; text-decoration: none;}
-a:visited { color: black; text-decoration: none;}
-a:hover { color: blue; text-decoration: underline;}
-
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
