--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,30 +1,29 @@
-<div class="row">
-  <div class="col-12" style="font-size: 1.2em;">
-    <div class="mt-5 my-4">
-      <h2><%= icon('fas', 'paperclip') %> ビューティコラム</h2>
-      <div class="tags my-5">
-      
-            <span class="badge badge-secondary">Secondary</span>
-
-      </div>
-
+<div class="col-12" style="font-size: 1.2em;">
+  <div class="mt-5 my-4">
+    <h2><%= icon('fas', 'paperclip') %> ビューティコラム</h2>
+    <div class="tags my-5">
+      <span class="badge badge-secondary">Secondary</span>
     </div>
-    <div class="container bootstrap snippets bootdey my-5">
-  <div class="col-sm-4">
-    <div class="widget single-news">
-      <div class="image">
-        <img src="https://via.placeholder.com/300x200/FFB6C1/000000" class="img-responsive">
-        <span class="gradient"></span>
-      </div>
-      <div class="details">
-        <div class="category"><a href="">분류</a></div>
-        <h3><a href="">More rain at salt flats delays racer's pursuit of land speed record</a></h3>
-        <time>Today, 18 August</time>
+    <div class="container my-5">
+      <div class="row">
+
+        <div class="col-lg-4 col-sm-6 mb-4">
+          <div class="widget single-news">
+            <div class="image">
+              
+              <div class="field">
+                <img src="" class="img-responsive">
+              </div>
+              <span class="gradient"></span>
+            </div>
+            <div class="details">
+              <div class="category"><a href="">분류</a></div>
+              <h3><a href="">More rain at salt flats delays racer's pursuit of land speed record</a></h3>
+              <time>Today, 18 August</time>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-  </div>
-</div>
-
-
