ref #2 - コラムページ作成 - Main画面に表示など - Admin Theme修正

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,6 +3,14 @@ body {
   background-color: #eee;
 }
 
+#time {
+  color: #fff ;
+}
+
+#post_title {
+  color: #fff ;
+}
+
 a:hover {
   text-decoration: none;
 }
@@ -15,6 +23,8 @@ a:hover {
 .widget.single-news .image img {
   display: block;
   width: 100%;
+  height: 340px;
+  object-fit: cover;
 }
 
 .widget.single-news .image .gradient {
@@ -54,14 +64,14 @@ a:hover {
   filter: alpha(opacity=50);
 }
 
-.widget.single-news .details h3 {
+.widget.single-news .details h1 {
   margin: 0;
   padding: 0;
   margin-bottom: 10px;
   font-size: 19px;
 }
 
-.widget.single-news .details h3 a {
+.widget.single-news .details h1 a {
   color: #fff;
   zoom: 1;
   -webkit-opacity: 0.8;
