--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -1,10 +1,9 @@
-$am-theme-primary: #1072bdf3;
+$am-theme-primary: #124eb6dd;
 @import 'activeadmin_addons/all';
 @import "active_material";
 
 .small_img {
     max-width: 130px;
-
 }
 
 .col-title {
@@ -17,7 +16,7 @@ $am-theme-primary: #1072bdf3;
 
 a:link,
 a:visited {
-    color: #022946e7;
+    color: #00102de7;
 }
 
 .menu_item {
@@ -28,6 +27,10 @@ a:visited {
     width: 80%;
 }
 
-#q_image_blob_ids{
+#q_image_blob_ids {
     width: 80%;
+}
+
+.col-tag {
+    width: 6%;
 }
